# hqtcsdl_btl_playground

./: .env.example  .gitignore  docker-compose.yml  preview.md  pyproject.toml
config/: coin_registry.json  settings.yaml
config/prompts/: insight_v1.txt
docs/: khung-bao-cao.md  kien-truc-he-thong.md  luna_crush.md  lunacrush-data-flow.md  pipeline-overview.md  pipeline-theory-form.md  quy-trinh-xu-ly-du-lieu.md
docs/bao_cao/: bao-cao-he-quan-tri-csdl.md  slide-bao-cao-btl.md  slide-bao-cao-btl.pptx
docs/diagrams/khung-bao-cao/: 01-luong-du-lieu-tong-quan.mmd  01-luong-du-lieu-tong-quan.puml  02-use-case-diagram.mmd  02-use-case-diagram.puml  03-activity-social-event.puml  render.sh  (+3 more)
docs/ke-hoach-phat-trien/: README.md  phase-00-nen-tang-infra.md  phase-01-tang-du-lieu-mongodb.md  phase-02-runtime-redis-streams.md  phase-03-ingest-filter.md  phase-04-ner-sentiment.md  phase-05-influence-scoring.md  phase-06-orchestrator.md  phase-07-insight-pdf.md  phase-08-api-websocket.md  phase-09-frontend-spa.md  phase-10-trien-khai-e2e.md
docs/theory/: README.md  ingest.docx  ingest.md  ner-mapping.docx  ner-mapping.md  spam-filter.docx  spam-filter.md
playground/X-API/: README.md  report.md  run.py  search_results.json
playground/alpha_vantage/: README.md  alphavantage_response.json  alphavantage_response.md  alphavantage_response_useful.json  alphavantage_response_useful.md  av_client.py  filter_news_response.py  news.json  news.md  run.py
playground/filter/: .env.example  .gitignore  README.md  pyproject.toml  run.py
playground/filter/lib/: cascade.py  config.py  dedup.py  export.py  heuristic.py  ml.py  mongo.py  progress.py
playground/finetune/fasttext/: .gitignore  README.md  pyproject.toml
playground/finetune/fasttext/lib/: data.py  train.py
playground/finetune/fasttext/notebooks/: train_and_test.ipynb
playground/influence/: .env.example  README.md  main.py  pyproject.toml  run.py
playground/influence/lib/: __init__.py  aggregate.py  config.py  mongo.py  progress.py  schema.py  scoring.py
playground/influence/tests/: test_scoring.py
playground/ingest/: .env.example  .gitignore  README.md  pyproject.toml  run.py
playground/ingest/lib/: __init__.py  config.py  events.py  mongo.py
playground/ingest/lib/collectors/: __init__.py  news_av.py  news_yahoo.py  reddit.py  reddit_browser.py  twitter.py
playground/ner/: .env.example  .gitignore  README.md  pyproject.toml  run.py
playground/scoring/: README.md  pyproject.toml  run.py
playground/scoring/lib/: config.py  market.py  mock_data.py  mock_data_v2.py  mongo.py  ortho.py  prep.py  progress.py  rules.py  score.py  transformer.py
playground/scoring/main/: run.py
playground/scoring/test/: run.py
playground/sentiment/: .env.example  README.md  requirements.txt  run.py
playground/yahoo_finance/: README.md  requirements.txt  run.py  yahoo_finance_response.json  yahoo_finance_response.md  yf_helpers.py
scripts/: bootstrap_db.py
src/api/: main.py  utils.py
src/common/: __init__.py  config.py  mongo_client.py  redis_client.py
src/orchestrator/: __init__.py  __main__.py  monitor.py  planning.py  session.py
src/pipeline/: README.md  __init__.py  __main__.py  _persist.py
tests/: conftest.py  test_api.py  test_filter.py  test_influence.py  test_influence_scoring_integration.py  test_infra.py  test_ingest_filter_integration.py  test_insight.py  test_ner.py  test_ner_sentiment_integration.py  test_orchestrator.py  test_pdf.py  test_runtime.py  test_schema.py  test_scoring.py  test_sentiment.py  test_session_context.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  theme.ts
(+152 files in other folders)
