[project]
name = "crypto-social-intelligence"
version = "0.1.0"
description = "Crypto Social Intelligence Pipeline — full-stack ETL + web"
readme = "preview.md"
requires-python = ">=3.12"
dependencies = [
    # P0 — infra (required)
    "motor>=3.3.0",
    "pymongo>=4.7.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "simhash>=2.1.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]
pipeline = [
    "openai>=1.40.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.26.0,<2",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "ccxt>=4.1.0",
    "fasttext-wheel>=0.9.2",
    "yfinance>=0.2.40",
    "rich>=13.7.0",
]
export = [
    "weasyprint>=62.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)s %(name)s: %(message)s"

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "fasttext-wheel>=0.9.2",
    "yfinance>=0.2.40",
]
