[project]
name = "crypto-filter"
version = "0.1.0"
description = "Pipeline Stage 2 — lọc spam/noise từ raw events MongoDB (heuristic + SimHash + FastText)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "simhash>=2.1.2",
    "fasttext-wheel>=0.9.2",
    "numpy>=1.26,<2",
    "openpyxl>=3.1.0",
]
