[project]
name = "influence"
version = "0.2.0"
description = "Stage 5 Influence Weighting for Crypto Social Prediction Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
