[project]
name = "crypto-ingest"
version = "0.1.0"
description = "Thu thập raw social events và lưu MongoDB Atlas (Pipeline Stage 1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
browser = ["playwright>=1.49.0"]
