[project]
name = "galaxy-score-v2"
version = "2.1.0"
description = "Hệ thống định lượng Galaxy Score v2.1 (State-Space & Divergence)"
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "rich>=13.7.0",
    "pymongo>=4.0.0",
    "python-dotenv>=1.0.0",
    "ccxt>=4.1.0"
]