[project]
name = "fasttext-spam-playground"
version = "0.1.0"
description = "Train and evaluate FastText spam classifier for crypto tweets (CPU-friendly)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fasttext-wheel>=0.9.2",
    "numpy>=1.26,<2",  # fasttext-wheel chưa tương thích NumPy 2.x
    "datasets>=2.18.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
]
